# ghost-drop

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  PRD.md  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.github/workflows/: ci.yml  docker-publish.yml
public/: index.html  view.html
public/css/: styles.css
public/js/: create.js  crypto.js  poison.js  view.js
server/: config.js  index.js
server/lib/: poison.js
server/routes/: secrets.js
server/store/: index.js  memoryStore.js  redisStore.js
src/: config.rs  handlers.rs  main.rs  poison.rs  store.rs
test/: secrets.test.js
