[package]
name = "ghostdrop"
version = "1.0.0"
edition = "2021"
description = "GhostDrop — frictionless, zero-knowledge multi-view secret sharing."
license = "MIT"

[[bin]]
name = "ghostdrop"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "0.27", features = ["tokio-comp"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
dotenvy = "0.15"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
